--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "fastify": "^5.6.2",
     "fastify-cors": "^6.0.3",
     "fastify-jwt": "^4.1.3",
+    "fastify-multer": "^2.0.3",
     "fastify-plugin": "^5.1.0",
-    "fastify-sensible": "^3.1.2"
+    "fastify-sensible": "^3.1.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "prisma": "^6.19.0",
