--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "fastify-jwt": "^4.1.3",
     "fastify-plugin": "^5.1.0",
     "fastify-sensible": "^3.1.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "prisma": "^6.19.0",
