--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "fastify-jwt": "^4.1.3",
     "fastify-plugin": "^5.1.0",
     "fastify-sensible": "^3.1.2",
+    "html-pdf-node": "^1.0.8",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11"
   },
   "devDependencies": {
+    "@types/html-pdf-node": "^1.0.2",
+    "@types/nodemailer": "^7.0.4",
     "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
